train ml models with 2 version

--- a/code/macro.ipynb
+++ b/code/macro.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "macro = pd.read_csv(\"data/macro_data.csv\")\n",
+    "macro = pd.read_csv(\"../data/macro_data.csv\")\n",
     "macro = macro.drop(labels=range(0,223), axis=0)\n",
     "macro = macro.drop(labels=range(260,439), axis=0)"
    ]
