--- a/code/ml_model_aggregated_ver.ipynb
+++ b/code/ml_model_aggregated_ver.ipynb
@@ -269,8 +269,8 @@
       "outputs": [],
       "source": [
         "train = pd.read_csv('../data/training_for_aggregated_ver.csv')\n",
-        "macro_se = pd.read_csv('../data/macro_data_5_features_selected.csv')\n",
-        "macro_pca = pd.read_csv('../data/pca_macro.csv')\n",
+        "macro_se = pd.read_csv('../data/macro_manual_selected_features.csv')\n",
+        "macro_pca = pd.read_csv('../data/macro_pca_selected_features.csv')\n",
         "train.insert(0,'charge_off_pro',train['charge_off_p'])\n",
         "train = train.drop('charge_off_p',axis=1)"
       ]
@@ -6600,11 +6600,18 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.8.13 ('cs475_nlp')",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.8.13"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "8842dad1b0fb14ca6a1d6d2e6cf7a743bbd45a17402f3e2b9724638843f2e2e7"
+      }
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
