--- a/code/pca for macro.ipynb
+++ b/code/pca for macro.ipynb
@@ -561,16 +561,16 @@
     "pca_df.insert(0,'Mnemonic',macro[\"Mnemonic\"])\n",
     "pca_df\n",
     "\n",
-    "pca_df.to_csv('../data/pca_macro.csv',index=False)\n",
+    "pca_df.to_csv('../data/macro_pca_selected_features.csv',index=False)\n",
     "\n",
-    "df = pd.read_csv('../data/pca_macro.csv')\n",
+    "df = pd.read_csv('../data/macro_pca_selected_features.csv')\n",
     "df"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.13 ('cs475_nlp')",
    "language": "python",
    "name": "python3"
   },
@@ -584,7 +584,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "8842dad1b0fb14ca6a1d6d2e6cf7a743bbd45a17402f3e2b9724638843f2e2e7"
+   }
   }
  },
  "nbformat": 4,
