--- a/code/preprocess_training_dataset.ipynb
+++ b/code/preprocess_training_dataset.ipynb
@@ -327,7 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "macro = pd.read_csv('../data/macro_data_5_features_selected.csv')"
+    "macro = pd.read_csv('../data/macro_manual_selected_features.csv')"
    ]
   },
   {
@@ -1664,7 +1664,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.13 ('cs475_nlp')",
    "language": "python",
    "name": "python3"
   },
@@ -1678,7 +1678,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "8842dad1b0fb14ca6a1d6d2e6cf7a743bbd45a17402f3e2b9724638843f2e2e7"
+   }
   }
  },
  "nbformat": 4,
