--- a/code/preprocess_macro.ipynb
+++ b/code/preprocess_macro.ipynb
@@ -99,7 +99,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.13 ('cs475_nlp')",
    "language": "python",
    "name": "python3"
   },
@@ -113,12 +113,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
+    "hash": "8842dad1b0fb14ca6a1d6d2e6cf7a743bbd45a17402f3e2b9724638843f2e2e7"
    }
   }
  },
